--- a/bumba/contact.html
+++ b/bumba/contact.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <main>
-        <section class="banner">
+        <section class="banner about">
             <div class="menu-links" id="MenuOverlay">
                 <div class="menu-hold">
                     <div class="image">
@@ -70,86 +70,82 @@
                     </div>
                 </div>
                 <div class="right">
-                    <a href="contact.html">Contact US</a>
-                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </nav>
             <div class="banner-image">
-                <img src="css/img/eye 1.png" alt="Eye">
+                <img src="css/img/blogbanner image.png" alt="TypeWriter">
                 <div class="image-mask"></div>
             </div>
             <div class="banner-text">
                 <div class="container banner-text-container">
-                    <h1>BRING YOUR <br> VISION TO LIFE.</h1>
-                    <p>Our team of disruptive and creative individuals will come  up with the best solutions for your brand. 
-                        <strong>Working with us will prove to be useful as it will help attract new prospects</strong>
-                    </p>
-                    <button>Get Started</button>
+                    <h1>OUR CONTACTS</h1>
                 </div>
             </div>
         </section>  
         <section class="projects">
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%">
-            <div class="projects-container container">
-                <div class="left">
-                    <h2>OUR <br> PROJECTS</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <button>See More</button>
+            <div class="blog-container container">
+                <img src="css/img/Vector (Stroke).png" alt="Stars" class="stars" width="200px">
+                <div class="blogs">
+                    <div class="blogs-content">
+                        <div class="blog blog-one">
+                            <img src="css/img/blogone.png" alt="Blog Thumbnail">
+                            <div class="blog-info">
+                                <div class="headline">
+                                    <p>INSIGHT</p>
+                                </div>
+                                <a href="blog_content.html">Lorem ipsum dolor sit amet</a>
+                                <p>December 1, 2022</p>
+                            </div>
+                        </div>
+                        <div class="blog blog-two">
+                            <img src="css/img/blogtwo.png" alt="Blog Thumbnail">
+                            <div class="blog-info">
+                                <div class="headline">
+                                    <p>INSIGHT</p>
+                                </div>
+                                <a href="blog_content.html">Who is Karen Mosepe?</a>
+                                <p>December 1, 2022</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="right">
-                    <img src="css/img/Ice cream smoke.png" alt="Smoke ice scream">
+                <div class="blogs">
+                    <div class="blogs-content">
+                        <div class="blog blog-two">
+                            <img src="css/img/blogtwo.png" alt="Blog Thumbnail">
+                            <div class="blog-info">
+                                <div class="headline">
+                                    <p>INSIGHT</p>
+                                </div>
+                                <a href="blog_content.html">Lorem ipsum dolor sit amet</a>
+                                <p>December 1, 2022</p>
+                            </div>
+                        </div>
+                        <div class="blog blog-one">
+                            <img src="css/img/blogone.png" alt="Blog Thumbnail">
+                            <div class="blog-info">
+                                <div class="headline">
+                                    <p>INSIGHT</p>
+                                </div>
+                                <a href="blog_content.html">Lorem ipsum dolor sit amet</a>
+                                <p>December 1, 2022</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pagination">
+                    <div class="number active" onclick="currentSlide(1)"><span>1</span></div>
+                    <div class="number" onclick="currentSlide(2)"><span>2</span></div>
+                    <div class="number" ><span>3</span></div>
+                    <div class="number" ><span>4</span></div>
+                    <div class="number" ><span>5</span></div>
+                    <div class="number" ><span>...</span></div>
+                    <div class="number" ><span>13</span></div>
                 </div>
             </div>
             <img src="css/img/Bottom Pattern.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
-        </section>   
-        <section class="about">
-            <div class="about-container container">
-                <div class="left">
-                    <img src="css/img/Rectangle 13.png" alt="Smoke ice scream">
-                </div>
-                <div class="right">
-                    <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <button>See More</button>
-                </div>
-            </div>
-            <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
-        </section>    
-        <section class="team">
-            <div class="team-container container">
-                <div class="team-head">
-                    <h1>Our Team</h1>
-                </div>
-                <div class="team-members">
-                    <div class="member">
-                        <img src="css/img/Member One.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Executive Creative Director</p>
-                        </div>
-                    </div>
-                    <div class="member">
-                        <img src="css/img/Member Two.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Head of Strategy & Operations</p>
-                        </div>
-                    </div>
-                    <div class="member">
-                        <img src="css/img/Member Three.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Senior Client Success Director</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="meet">
-                    <button>Meet Team</button>
-                </div>
-            </div>
-        </section>
+        </section> 
     </main>
     <footer>
         <div class="footer">
@@ -316,7 +312,6 @@
             <p>Copyright © 2023 Bumba Africa, All Rights Reserved</p>
         </div>
     </footer>
-
     <script src="js/script.js"></script>
 </body>
 </html>
