--- a/bumba/portfolio.html
+++ b/bumba/portfolio.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <main>
-        <section class="banner">
+        <section class="banner about">
             <div class="menu-links" id="MenuOverlay">
                 <div class="menu-hold">
                     <div class="image">
@@ -70,86 +70,72 @@
                     </div>
                 </div>
                 <div class="right">
-                    <a href="contact.html">Contact US</a>
+                    <a href="blog.html">BLOG</a>
                     <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </nav>
             <div class="banner-image">
-                <img src="css/img/eye 1.png" alt="Eye">
+                <img src="css/img/portfoliobanner image.png" alt="Kiss">
                 <div class="image-mask"></div>
             </div>
             <div class="banner-text">
                 <div class="container banner-text-container">
-                    <h1>BRING YOUR <br> VISION TO LIFE.</h1>
-                    <p>Our team of disruptive and creative individuals will come  up with the best solutions for your brand. 
-                        <strong>Working with us will prove to be useful as it will help attract new prospects</strong>
-                    </p>
-                    <button>Get Started</button>
+                    <h1>OUR PORTFOLIO</h1>
                 </div>
             </div>
         </section>  
         <section class="projects">
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%">
-            <div class="projects-container container">
-                <div class="left">
-                    <h2>OUR <br> PROJECTS</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <button>See More</button>
+        </section>  
+        <section class="portfolio">
+            <div class="portfolio-container container">
+                <div class="row">
+                    <div class="huge-pic">
+                        <img src="css/img/Estafric Huge.png" alt="">
+                    </div>
+                    <div class="small-pics">
+                        <div class="top">
+                            <img src="css/img/Estafric small black.png" alt="">
+                            <img src="css/img/Estafric small ONe.png" alt="">
+                        </div>
+                        <div class="bottom">
+                            <img src="css/img/Estafric small two.png" alt="">
+                            <img src="css/img/Estafric small three.png" alt="">
+                        </div>
+                    </div>
                 </div>
-                <div class="right">
-                    <img src="css/img/Ice cream smoke.png" alt="Smoke ice scream">
+                <div class="row">
+                    <div class="small-pics">
+                        <div class="top">
+                            <img src="css/img/kwangu one.png" alt="">
+                            <img src="css/img/kwangu two.png" alt="">
+                        </div>
+                        <div class="bottom">
+                            <img src="css/img/kwangu three.png" alt="">
+                            <img src="css/img/kwangu four.png" alt="">
+                        </div>
+                    </div>
+                    <div class="huge-pic">
+                        <img src="css/img/kwangu five.png" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="small-pics-two">
+                        <img src="css/img/skin two.png" alt="">
+                        <img src="css/img/skine three.png" alt="">
+                    </div>
+                    <div class="huge-pic-two">
+                        <img src="css/img/skin sensation one.png" alt="">
+                    </div>
+                </div>
+                <div class="row">
+
                 </div>
             </div>
+        </section>  
+        <section class="projects">
             <img src="css/img/Bottom Pattern.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
-        </section>   
-        <section class="about">
-            <div class="about-container container">
-                <div class="left">
-                    <img src="css/img/Rectangle 13.png" alt="Smoke ice scream">
-                </div>
-                <div class="right">
-                    <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <button>See More</button>
-                </div>
-            </div>
-            <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
-        </section>    
-        <section class="team">
-            <div class="team-container container">
-                <div class="team-head">
-                    <h1>Our Team</h1>
-                </div>
-                <div class="team-members">
-                    <div class="member">
-                        <img src="css/img/Member One.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Executive Creative Director</p>
-                        </div>
-                    </div>
-                    <div class="member">
-                        <img src="css/img/Member Two.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Head of Strategy & Operations</p>
-                        </div>
-                    </div>
-                    <div class="member">
-                        <img src="css/img/Member Three.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Senior Client Success Director</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="meet">
-                    <button>Meet Team</button>
-                </div>
-            </div>
-        </section>
+        </section>  
     </main>
     <footer>
         <div class="footer">
@@ -316,7 +302,6 @@
             <p>Copyright © 2023 Bumba Africa, All Rights Reserved</p>
         </div>
     </footer>
-
     <script src="js/script.js"></script>
 </body>
 </html>
