--- a/bumba/blog.html
+++ b/bumba/blog.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bumba Africa</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="194x194" href="css/favicon/favicon-194x194.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="css/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="css/favicon/favicon-16x16.png">
+    <link rel="manifest" href="css/favicon/site.webmanifest">
+    <link rel="mask-icon" href="css/favicon/safari-pinned-tab.svg" color="#f7941e">
+    <link rel="shortcut icon" href="css/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="css/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <title>Bumba Africa - Blog</title>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -89,7 +101,9 @@
                 <div class="blogs">
                     <div class="blogs-content">
                         <div class="blog blog-one">
-                            <img src="css/img/blogone.png" alt="Blog Thumbnail">
+                            <a href="blog_content.html" style="text-decoration: none; cursor: pointer !important; pointer-events: all;">
+                                <img src="css/img/blogone.png" alt="Blog Thumbnail" style="pointer-events: none; cursor: pointer;">
+                            </a>
                             <div class="blog-info">
                                 <div class="headline">
                                     <p>INSIGHT</p>
@@ -99,7 +113,9 @@
                             </div>
                         </div>
                         <div class="blog blog-two">
-                            <img src="css/img/blogtwo.png" alt="Blog Thumbnail">
+                            <a href="blog_content.html" style="text-decoration: none; cursor: pointer !important; pointer-events: all;">
+                                <img src="css/img/blogtwo.png" alt="Blog Thumbnail" style="pointer-events: none; cursor: pointer;">
+                            </a>
                             <div class="blog-info">
                                 <div class="headline">
                                     <p>INSIGHT</p>
@@ -113,7 +129,9 @@
                 <div class="blogs">
                     <div class="blogs-content">
                         <div class="blog blog-two">
-                            <img src="css/img/blogtwo.png" alt="Blog Thumbnail">
+                            <a href="blog_content.html" style="text-decoration: none; cursor: pointer !important; pointer-events: all;">
+                                <img src="css/img/blogtwo.png" alt="Blog Thumbnail" style="pointer-events: none; cursor: pointer;">
+                            </a>
                             <div class="blog-info">
                                 <div class="headline">
                                     <p>INSIGHT</p>
@@ -123,7 +141,9 @@
                             </div>
                         </div>
                         <div class="blog blog-one">
-                            <img src="css/img/blogone.png" alt="Blog Thumbnail">
+                            <a href="blog_content.html" style="text-decoration: none; cursor: pointer !important; pointer-events: all;">
+                                <img src="css/img/blogone.png" alt="Blog Thumbnail" style="pointer-events: none; cursor: pointer;">
+                            </a>
                             <div class="blog-info">
                                 <div class="headline">
                                     <p>INSIGHT</p>
