--- a/bumba/index.html
+++ b/bumba/index.html
@@ -15,6 +15,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="css/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Our team of disruptive and creative individuals will come up with the best solutions for your brand. Working with us will prove to be useful as it will help attract new prospects. Bumba Africa offers a range of high-quality services to clients in the tourism industry. From guided tours to cultural experiences, we strive to provide unforgettable experiences for our customers. Contact us today to learn more!">
 
     <title>Bumba Africa</title>
 
