Social Ad Campaign

--- a/bumba/index.html
+++ b/bumba/index.html
@@ -19,6 +19,22 @@
 
     <title>Bumba Africa</title>
 
+    <!-- == META OG Social Media Ads == -->
+    <meta property="og:title" content="Chebon Kibet" />
+    <meta property="og:url" content="https://bumbaafrica.web.app" />
+    <meta property="og:image" content="https://bumbaafrica.web.app/css/img/Facebook.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:desc revealription" content="Transforming Your Ideas To Reality" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@chebon_kibet">
+    <meta name="twitter:title" content="Chebon Kibet">
+    <meta name="twitter:desc revealription" content="Transforming Your Ideas To Reality">
+    <meta name="twitter:image" content="https://bumbaafrica.web.app/css/img/Twitter.png">
+    <meta name="twitter:player" content="https://bumbaafrica.web.app">
+    <meta name="twitter:player:width" content="280">
+    <meta name="twitter:player:height" content="150">
+
     <link rel="stylesheet" href="css/style.css">
 
     <!-- == Icons == -->
