--- a/bumba/index.html
+++ b/bumba/index.html
@@ -20,15 +20,15 @@
     <title>Bumba Africa</title>
 
     <!-- == META OG Social Media Ads == -->
-    <meta property="og:title" content="Chebon Kibet" />
+    <meta property="og:title" content="Bumba Africa" />
     <meta property="og:url" content="https://bumbaafrica.web.app" />
     <meta property="og:image" content="https://bumbaafrica.web.app/css/img/Facebook.png" />
     <meta property="og:type" content="website" />
     <meta property="og:desc revealription" content="Transforming Your Ideas To Reality" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@chebon_kibet">
-    <meta name="twitter:title" content="Chebon Kibet">
+    <meta name="twitter:site" content="@Bumba">
+    <meta name="twitter:title" content="Bumba Africa">
     <meta name="twitter:desc revealription" content="Transforming Your Ideas To Reality">
     <meta name="twitter:image" content="https://bumbaafrica.web.app/css/img/Twitter.png">
     <meta name="twitter:player" content="https://bumbaafrica.web.app">
