--- a/bumba/portfolio.html
+++ b/bumba/portfolio.html
@@ -147,17 +147,27 @@
                         <img src="css/img/kwangu five.png" alt="">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="small-pics-two">
-                        <img src="css/img/skin two.png" alt="">
-                        <img src="css/img/skine three.png" alt="">
-                    </div>
-                    <div class="huge-pic-two">
-                        <img src="css/img/skin sensation one.png" alt="">
+                <div id="skin-sensation">
+                    <div class="angry-grid">
+                        <div id="item-0-skin"><img src="css/img/skin two.png" alt=""></div>
+                        <div id="item-1-skin"><img src="css/img/skine three.png" alt=""></div>
+                        <div id="item-2-skin"><img src="css/img/skin sensation one.png" alt=""></div>
+                      </div>
+                    <div id="tttext">
+                        <p>SKin Sensation</p>
                     </div>
                 </div>
-                <div class="row">
-
+                <div id="twafane">
+                    <div class="angry-grid">
+                        <div id="item-0"><img src="css/img/Twafane One.png" alt="Twafane Images"></div>
+                        <div id="item-1"><img src="css/img/Twafane Two.png" alt="Twafane Images"></div>
+                        <div id="item-2"><img src="css/img/Twafane Three.png" alt="Twafane Images"></div>
+                        <div id="item-3"><img src="css/img/Twafane Four.png" alt="Twafane Images"></div>
+                        <div id="item-4"><img src="css/img/Twafane Five.png" alt="Twafane Images"></div>
+                      </div>
+                      <div id="tttext">
+                        <p>Twafane</p>
+                    </div>
                 </div>
             </div>
         </section>  
