--- a/bumba/portfolio.html
+++ b/bumba/portfolio.html
@@ -132,6 +132,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="tttext">
+                    <p>EASAFRIC</p>
+                </div>
                 <div class="row">
                     <div class="small-pics">
                         <div class="top">
@@ -147,6 +150,9 @@
                         <img src="css/img/kwangu five.png" alt="">
                     </div>
                 </div>
+                <div id="tttext">
+                    <p>Kwangu Health</p>
+                </div>
                 <div id="skin-sensation">
                     <div class="angry-grid">
                         <div id="item-0-skin"><img src="css/img/skin two.png" alt=""></div>
@@ -154,7 +160,7 @@
                         <div id="item-2-skin"><img src="css/img/skin sensation one.png" alt=""></div>
                       </div>
                     <div id="tttext">
-                        <p>SKin Sensation</p>
+                        <p>Skin Sensation</p>
                     </div>
                 </div>
                 <div id="twafane">
