--- a/bumba/portfolio.html
+++ b/bumba/portfolio.html
@@ -117,62 +117,110 @@
         </section>  
         <section class="portfolio">
             <div class="portfolio-container container">
-                <div class="row">
-                    <div class="huge-pic">
-                        <img src="css/img/Estafric Huge.png" alt="">
-                    </div>
-                    <div class="small-pics">
-                        <div class="top">
-                            <img src="css/img/Estafric small black.png" alt="">
-                            <img src="css/img/Estafric small ONe.png" alt="">
+                <div class="row estafric">
+                    <div class="row-content">
+                        <div class="left">
+                            <img src="css/img/Estafric Huge.png" alt="Estafric">
                         </div>
-                        <div class="bottom">
-                            <img src="css/img/Estafric small two.png" alt="">
-                            <img src="css/img/Estafric small three.png" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div id="tttext">
-                    <p>EASAFRIC</p>
-                </div>
-                <div class="row">
-                    <div class="small-pics">
-                        <div class="top">
-                            <img src="css/img/kwangu one.png" alt="">
-                            <img src="css/img/kwangu two.png" alt="">
-                        </div>
-                        <div class="bottom">
-                            <img src="css/img/kwangu three.png" alt="">
-                            <img src="css/img/kwangu four.png" alt="">
+                        <div class="right">
+                            <div class="row">
+                                <div class="col">
+                                    <img src="css/img/Estafric small black.png" alt="">                                    
+                                </div>
+                                <div class="col">
+                                    <img src="css/img/Estafric small ONe.png" alt="">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <img src="css/img/Estafric small two.png" alt="">
+                                </div>
+                                <div class="col">
+                                    <img src="css/img/Estafric small three.png" alt="">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="huge-pic">
-                        <img src="css/img/kwangu five.png" alt="">
+                    <div class="row-text" id="tttext">
+                        <p>ESTAFRIC</p>
                     </div>
                 </div>
-                <div id="tttext">
-                    <p>Kwangu Health</p>
-                </div>
-                <div id="skin-sensation">
-                    <div class="angry-grid">
-                        <div id="item-0-skin"><img src="css/img/skin two.png" alt=""></div>
-                        <div id="item-1-skin"><img src="css/img/skine three.png" alt=""></div>
-                        <div id="item-2-skin"><img src="css/img/skin sensation one.png" alt=""></div>
-                      </div>
-                    <div id="tttext">
-                        <p>Skin Sensation</p>
+                <div class="row estafric">
+                    <div class="row-content">
+                        <div class="right">
+                            <div class="row">
+                                <div class="col">
+                                    <img src="css/img/kwangu one.png" alt="Estafric">                                    
+                                </div>
+                                <div class="col">
+                                    <img src="css/img/kwangu two.png" alt="Estafric">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <img src="css/img/kwangu three.png" alt="Estafric">
+                                </div>
+                                <div class="col">
+                                    <img src="css/img/kwangu four.png" alt="Estafric">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="left">
+                            <img src="css/img/kwangu five.png" alt="Estafric">
+                        </div>
+                    </div>
+                    <div class="row-text" id="tttext">
+                        <p>Kwangu Health</p>
                     </div>
                 </div>
-                <div id="twafane">
-                    <div class="angry-grid">
-                        <div id="item-0"><img src="css/img/Twafane One.png" alt="Twafane Images"></div>
-                        <div id="item-1"><img src="css/img/Twafane Two.png" alt="Twafane Images"></div>
-                        <div id="item-2"><img src="css/img/Twafane Three.png" alt="Twafane Images"></div>
-                        <div id="item-3"><img src="css/img/Twafane Four.png" alt="Twafane Images"></div>
-                        <div id="item-4"><img src="css/img/Twafane Five.png" alt="Twafane Images"></div>
-                      </div>
-                      <div id="tttext">
-                        <p>Twafane</p>
+                <div class="row twafane">
+                    <div class="row-content">
+                        <div class="twafane-right">
+                            <div class="twafane-row one">
+                                <div class="twafane-col one">
+                                    <img src="css/img/skin two.png" alt="Estafric">                                    
+                                </div>
+                                <div class="twafane-col two">
+                                    <img src="css/img/skine three.png" alt="Estafric">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skin-sense-right">
+                            <img src="css/img/skin sensation one.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row-text" id="tttext">
+                        <p>Twafwane</p>
+                    </div>
+                </div>
+                <div class="row twafane">
+                    <div class="row-content">
+                        <div class="twafane-right">
+                            <div class="twafane-row one">
+                                <div class="twafane-col one">
+                                    <img src="css/img/Twafane One.png" alt="Estafric">                                    
+                                </div>
+                                <div class="twafane-col two">
+                                    <img src="css/img/Twafane Two.png" alt="Estafric">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="twafane-middle">
+                            <img src="css/img/Twafane Three.png" alt="Estafric">
+                        </div>
+                        <div class="twafane-left">
+                            <div class="twafane-row two">
+                                <div class="twafane-col one">
+                                    <img src="css/img/Twafane Four.png" alt="Estafric">
+                                </div>
+                                <div class="twafane-col two">
+                                    <img src="css/img/Twafane Five.png" alt="Estafric">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-text" id="tttext">
+                        <p>Twafwane</p>
                     </div>
                 </div>
             </div>
