--- a/bumba/index.html
+++ b/bumba/index.html
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="rectangle" id="ban-rect">
-
+            <div class="rectangle-two" id="ban-recttwo">
             </div>
         </section>  
         <section class="projects">
